Revision history for Perl extension XML::SemanticDiff.

    - Fixed the warning emitted with the namespaces being undefined.
      (t/8nonexist_ns.t)
        - fixes http://rt.cpan.org/Public/Bug/Display.html?id=1379
    - Fixed the search algorithm so it will identify the location of the
      XML tags properly. (t/09two-tags.t)
    - Applied a modified version of:
        http://rt.cpan.org/Ticket/Display.html?id=24715
        - Fixes an exception when comparing XML with multi-byte 
          characters.
        - Thanks to RMBARKER
        - t/10wide-cahrs.t

0.95
    [ Undocumented changelog. ]

0.93  June 14 2001
	- third (hopefully final) BETA
	- more doc fixes.

0.91  June 12 2001
	- second BETA release.
        - code cleanup.
	- major doc fixes. 

0.50  May 25 2001
	- initial public BETA release. 

0.01  Thu May 24 10:09:38 2001
	- original version; created by h2xs 1.19
