@@ -17,3 +17,4 @@ t/07pitest.t
 t/08nonexist_ns.t
 t/09two-tags.t
 t/10wide-chars.t
+t/11tag-in-different-locations.t
